[package]
name = "rustify"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.19"               # Pour créer l'interface TUI
crossterm = "0.26"          # Pour gérer les entrées clavier et le terminal
rodio = "0.16"              # Pour lire des fichiers audio
walkdir = "2.3"             # Pour scanner les dossiers et sous-dossiers
serde = { version = "1.0", features = ["derive"] }  # Pour la sérialisation des playlists et des données du dossier
serde_json = "1.0"          # Pour sauvegarder et lire des fichiers JSON (mémoriser le dossier et les playlists)
